--- a/booking_hw1.ipynb
+++ b/booking_hw1.ipynb
@@ -983,7 +983,8 @@
     "from bs4 import BeautifulSoup\n",
     "\n",
     "# Obtén el HTML de la página cargada\n",
-    "html_content = browser.page_source\n",
+    "#html_content = browser.page_source\n",
+    "html_content = \"https://www.booking.com/searchresults.html?ss=Barcelona&checkin=2025-06-05&checkout=2025-06-19\"\n",
     "\n",
     "# Analiza el HTML con Beautiful Soup\n",
     "soup = BeautifulSoup(html_content, \"lxml\")"
