--- a/Project1_TM_DiD.ipynb
+++ b/Project1_TM_DiD.ipynb
@@ -1182,14 +1182,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 Prices   R-squared:                       0.287\n",
+      "Model:                            OLS   Adj. R-squared:                  0.283\n",
+      "Method:                 Least Squares   F-statistic:                     72.86\n",
+      "Date:                Tue, 04 Feb 2025   Prob (F-statistic):          1.80e-235\n",
+      "Time:                        22:16:46   Log-Likelihood:                -28662.\n",
+      "No. Observations:                3455   AIC:                         5.736e+04\n",
+      "Df Residuals:                    3435   BIC:                         5.749e+04\n",
+      "Df Model:                          19                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=========================================================================================\n",
+      "                            coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "Intercept               566.3052    146.449      3.867      0.000     279.170     853.441\n",
+      "Treatment               678.0846     48.773     13.903      0.000     582.458     773.711\n",
+      "Time_Period              11.6289     49.026      0.237      0.813     -84.494     107.752\n",
+      "Treatment:Time_Period   819.5682     66.586     12.308      0.000     689.016     950.120\n",
+      "Ratings                  30.0423     16.785      1.790      0.074      -2.868      62.952\n",
+      "teo                     -36.4995    281.064     -0.130      0.897    -587.569     514.570\n",
+      "street                 -118.9245    158.320     -0.751      0.453    -429.335     191.487\n",
+      "comedor                 -98.9007     54.942     -1.800      0.072    -206.623       8.822\n",
+      "minib                    39.7033     69.747      0.569      0.569     -97.046     176.452\n",
+      "inform                  -36.7680     57.407     -0.640      0.522    -149.324      75.788\n",
+      "allad                  -107.0953    229.479     -0.467      0.641    -557.025     342.834\n",
+      "botan                     2.2074    121.796      0.018      0.986    -236.593     241.008\n",
+      "gratuit                 -90.5327     30.074     -3.010      0.003    -149.498     -31.568\n",
+      "articul                  65.8197     47.160      1.396      0.163     -26.644     158.284\n",
+      "aleman                 -138.3079    254.552     -0.543      0.587    -637.397     360.781\n",
+      "parking                 -40.8829     52.871     -0.773      0.439    -144.544      62.779\n",
+      "grup                    218.3223    138.288      1.579      0.114     -52.813     489.458\n",
+      "eudald                  329.6846    344.540      0.957      0.339    -345.840    1005.209\n",
+      "plan                    -51.9547     34.092     -1.524      0.128    -118.797      14.888\n",
+      "oceanografic           -104.9127    294.092     -0.357      0.721    -681.526     471.701\n",
+      "==============================================================================\n",
+      "Omnibus:                     3437.795   Durbin-Watson:                   0.992\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           252250.764\n",
+      "Skew:                           4.731   Prob(JB):                         0.00\n",
+      "Kurtosis:                      43.776   Cond. No.                         176.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
    "source": [
     "import statsmodels.formula.api as smf\n",
+    "# Define the formula for the regression\n",
+    "# we select top 15 words from  df_transformed in preprocessing2 file (top 15 tfidf_sum)\n",
+    "word_features_formula = \"teo + street + comedor + minib + inform + allad + botan + gratuit + articul + aleman + parking + grup + eudald + plan + oceanografic\"\n",
+    "formula = f\"Prices ~ Treatment + Time_Period + Treatment*Time_Period + Ratings+{word_features_formula}\"\n",
     "\n",
-    "# Assuming merged_data contains all necessary columns including Prices, Ratings, Treatment, and the TF-IDF features\n",
-    "model = smf.ols('Prices ~ Treatment + Time_Period + Treatment*Time_Period + Ratings + ' + ' + '.join(text_features.columns), data=df_merged).fit()\n",
+    "# Fit the regression model\n",
+    "model = smf.ols(formula=formula, data=df_merged).fit()\n",
+    "\n",
+    "# Display the regression results\n",
     "print(model.summary())"
    ]
   },
@@ -1274,6 +1330,64 @@
     "- **High-quality hotels** (with more \"luxury\" and \"premium\" words in their descriptions) may see a larger **positive price increase** in Barcelona compared to **low-quality hotels**. This could reflect the fact that the treatment (being in Barcelona) increases demand more for higher-end hotels due to location desirability or other factors.\n",
     "  \n",
     "By including the interaction between **Treatment** and **Quality**, you're able to see how the effect of the treatment differs depending on the quality of the hotels, offering a more nuanced understanding of the treatment's impact."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 Prices   R-squared:                       0.286\n",
+      "Model:                            OLS   Adj. R-squared:                  0.284\n",
+      "Method:                 Least Squares   F-statistic:                     115.2\n",
+      "Date:                Tue, 04 Feb 2025   Prob (F-statistic):          1.29e-241\n",
+      "Time:                        22:19:50   Log-Likelihood:                -28664.\n",
+      "No. Observations:                3455   AIC:                         5.735e+04\n",
+      "Df Residuals:                    3442   BIC:                         5.743e+04\n",
+      "Df Model:                          12                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "================================================================================================\n",
+      "                                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------------------------\n",
+      "Intercept                      516.6882    150.663      3.429      0.001     221.291     812.085\n",
+      "Treatment                      680.7779     74.220      9.172      0.000     535.257     826.298\n",
+      "Time_Period                     36.2798     79.771      0.455      0.649    -120.124     192.683\n",
+      "Treatment:Time_Period          922.7524    106.444      8.669      0.000     714.052    1131.453\n",
+      "Ratings                         28.9124     16.751      1.726      0.084      -3.930      61.755\n",
+      "Luxury                          -0.8200     48.447     -0.017      0.986     -95.807      94.167\n",
+      "Treatment:Luxury               -15.1065     65.173     -0.232      0.817    -142.888     112.675\n",
+      "Time_Period:Luxury             -14.7150     72.491     -0.203      0.839    -156.845     127.415\n",
+      "Treatment:Time_Period:Luxury   -68.1920     95.157     -0.717      0.474    -254.761     118.377\n",
+      "Budget                          -2.0128     39.422     -0.051      0.959     -79.306      75.280\n",
+      "Treatment:Budget               -20.8105     48.248     -0.431      0.666    -115.408      73.787\n",
+      "Time_Period:Budget             -12.9632     58.487     -0.222      0.825    -127.636     101.710\n",
+      "Treatment:Time_Period:Budget   -46.6566     70.434     -0.662      0.508    -184.752      91.439\n",
+      "==============================================================================\n",
+      "Omnibus:                     3438.139   Durbin-Watson:                   0.991\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           251245.581\n",
+      "Skew:                           4.734   Prob(JB):                         0.00\n",
+      "Kurtosis:                      43.689   Cond. No.                         88.9\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "formula = f\"Prices ~ Treatment + Time_Period + Treatment*Time_Period + Ratings + Treatment*Time_Period*Luxury + Treatment*Time_Period*Budget\" \n",
+    "\n",
+    "# Fit the regression model\n",
+    "model = smf.ols(formula=formula, data=df_merged).fit()\n",
+    "\n",
+    "# Display the regression results\n",
+    "print(model.summary())"
    ]
   }
  ],
