It needs a better clean

--- a/HW_1.ipynb
+++ b/HW_1.ipynb
@@ -303,19 +303,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "c7d01759",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# dates = browser.find_elements('xpath',path)\n",
-    "# for date in dates:\n",
-    "#     print(date.get_attribute(\"data-date\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 52,
    "id": "6b6deca3",
    "metadata": {},
@@ -836,53 +823,6 @@
     "        print(\"Button is not clickable. Adjusting...\")\n",
     "        browser.execute_script(\"window.scrollBy(0, -50);\")  # Scroll up slightly more\n",
     "        time.sleep(1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "09485549",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #Retrieving hotel's name and ratings \n",
-    "# hotels = browser.find_elements('xpath', '//div[@data-testid=\"title\"]')\n",
-    "# ratings = browser.find_elements('xpath', '//div[@class=\"a3b8729ab1 d86cee9b25\"]')  # Adjust the XPath as needed\n",
-    "\n",
-    "# for index, hotel in enumerate(hotels, start=1):\n",
-    "#     hotel_name = hotel.text\n",
-    "#     # Safely access the rating, or default to \"N/A\" if not found\n",
-    "#     rating = ratings[index - 1].text if index <= len(ratings) else \"N/A\"\n",
-    "    \n",
-    "#     if rating != \"N/A\":\n",
-    "#         score = rating.split()[1]  # Extract the score part\n",
-    "#     else:\n",
-    "#         score = \"N/A\"  # Handle case where there's no rating\n",
-    "    \n",
-    "#     print(f\"{index}. {hotel_name} - {score}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "5d4b6e3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assuming `browser` is already initialized\n",
-    "#ratings_elements = browser.find_elements(By.CSS_SELECTOR, 'div.a3b8729ab1.d86cee9b25')  # Corrected selector\n",
-    "\n",
-    "# ratings_raw = []  # Empty list to store ratings\n",
-    "# for rating_element in ratings_elements:\n",
-    "#     ratings_raw.append(rating_element.text)  # Extract and store text\n",
-    "\n",
-    "# print(ratings_raw)  # Print the extracted ratings\n",
-    "\n",
-    "# # Extract only the numerical rating, replacing commas with dots\n",
-    "# ratings_list = [r.split()[-1].replace(',', '.') for r in ratings_raw]\n",
-    "# print(ratings_list)\n",
-    "\n",
-    "# len(ratings_raw)"
    ]
   },
   {
@@ -1859,15 +1799,8 @@
     }
    ],
    "source": [
-    "#ratings = browser.find_elements('xpath', '//div[@data-testid=\"review-score\"]')\n",
     "\n",
-    "#for index, rating in enumerate(ratings, start=1):\n",
-    "#    score = rating.text.split()[1]  # Extracts the second part (e.g., \"8,9\" from \"Puntuación: 8,9\")\n",
-    "#    print(f\"{index}. {score}\")\n",
-    "\n",
-    "hotels = browser.find_elements('xpath', '//div[@data-testid=\"title\"]')\n",
-    "#for index, hotel in enumerate(hotels, start=1):\n",
-    "#    print(f\"{index}. {hotel.text}\")"
+    "hotels = browser.find_elements('xpath', '//div[@data-testid=\"title\"]')\n"
    ]
   },
   {
@@ -2854,11 +2787,7 @@
     }
    ],
    "source": [
-    "#Storing values of hotels and ratings\n",
-    "# ratings_list=[]\n",
-    "# for i in ratings:\n",
-    "#     print(i.text.split()[1])\n",
-    "#     ratings_list.append(i.text.split()[1])\n",
+    "\n",
     "hotels_list=[]\n",
     "for i in hotels:\n",
     "    print(i.text)\n",
@@ -3868,11 +3797,6 @@
     }
    ],
    "source": [
-    "# # If ratings_list is shorter, append 'N/A' for missing ratings\n",
-    "# if len(ratings_list) < len(hotels_list):\n",
-    "#     ratings_list.extend(['N/A'] * (len(hotels_list) - len(ratings_list)))\n",
-    "# elif len(ratings_list) > len(hotels_list):\n",
-    "#     hotels_list.extend(['N/A'] * (len(ratings_list) - len(hotels_list)))\n",
     "\n",
     "# Now you can safely create the DataFrame\n",
     "#hotel_data = pd.DataFrame({'Hotel': hotels_list})\n",
